--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul>
-    <li><a href="/">Home</a></li>
-    <li class="settings"><a href="/settings">Settings</a></li>
+    <li><a routerLink="/">Home</a></li>
+    <li class="settings"><a routerLink="/settings">Settings</a></li>
 </ul>
 <router-outlet>
 </router-outlet>
