--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -46,3 +46,13 @@ div.scrollable {
     white-space: normal;
     width: 150px;
 }
+
+.load-more {
+    height: 40px;
+    margin: 100px 0px;
+    border-radius: 40px;
+    width: 40px;
+    background: gray;
+    color: white;
+    border: 1px solid gray;
+}
