--- a/src/app/movie-info/movie-info.component.html
+++ b/src/app/movie-info/movie-info.component.html
@@ -40,7 +40,7 @@
             <div class="scrollable">
                 <div *ngFor="let crew of mediaInfo.credits.crew;">
                     <div class="info">
-                        <a routerLink="/crew/{{crew.id}}">
+                        <a routerLink="/cast/{{crew.id}}">
                             <img class="poster" src="{{castImgBaseUrl}}{{crew.profile_path}}" fallback="/assets/images/no-image.png" />
                         </a>
                         <div class="title">{{crew.department}}</div>
