--- a/src/app/cast-info/cast-info.component.html
+++ b/src/app/cast-info/cast-info.component.html
@@ -14,13 +14,13 @@
                 <span>Also known as:</span>{{castInfo.also_known_as.join(", ")}}
             </div>
             <div class="detail">
-                <span>Knowm for department:</span>{{castInfo.known_for_department}}
+                <span>Known for department:</span>{{castInfo.known_for_department}}
             </div>
             <div class="detail">
                 <span>Place of birth</span>{{castInfo.place_of_birth}}
             </div>
             <div class="detail">
-                <span>biography:</span>
+                <span>Biography:</span>
                 <div class="overview">{{castInfo.biography}}</div>
             </div>
         </div>
