Corrected image path for No Image

--- a/src/app/cast-info/cast-info.component.html
+++ b/src/app/cast-info/cast-info.component.html
@@ -30,7 +30,7 @@
                 <div *ngFor="let cast of castInfo.combined_credits.cast;">
                     <div class="info">
                         <a routerLink="/movie/{{cast.id}}">
-                            <img class="poster" src="{{smallImgBaseUrl}}{{cast.poster_path}}" fallback="/assets/images/no-image.png" />
+                            <img class="poster" src="{{smallImgBaseUrl}}{{cast.poster_path}}" fallback="assets/images/no-image.png" />
                         </a>
                         <div class="title">{{cast.character}}</div>
                         <div class="title">{{cast.title}} {{cast.release_date | date:'yyyy'}}</div>
@@ -44,7 +44,7 @@
                 <div *ngFor="let crew of castInfo.combined_credits.crew;">
                     <div class="info">
                         <a routerLink="/movie/{{crew.id}}">
-                            <img class="poster" src="{{smallImgBaseUrl}}{{crew.poster_path}}" fallback="/assets/images/no-image.png" />
+                            <img class="poster" src="{{smallImgBaseUrl}}{{crew.poster_path}}" fallback="assets/images/no-image.png" />
                         </a>
                         <div class="title">{{crew.job}}</div>
                         <div class="title">{{crew.title}}</div>
