--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,38 @@
-<div class="search">
-    <input type="text" [(ngModel)]="searchText" placeholder="Search ..">
-    <img src="assets/images/searchicon.png" (click)="search()">
+<form class="search" (submit)="search()">
+    <img src="assets/images/searchicon.png">
+    <input type="text" [(ngModel)]="searchText" name="searchText" placeholder="Search ..">
+</form>
+<div *ngIf="searchResults.length > 0">
+    <div *ngFor="let search of searchResults; index as i;">
+        <div class="cat-label">{{search.title}}
+            <button (click)="removeSearch(i)">X</button>
+        </div>
+        <div class="scrollable">
+            <div *ngFor="let item of search.items;">
+                <div *ngIf="!isWatched(item.id)">
+                    <div class="movie-info">
+                        <button class="hide-button" (click)="watched(i, item.id)">X</button>
+                        <a routerLink="/movie/{{item.id}}">
+                            <img class="movie-poster" src="{{imgBaseUrl}}{{item.poster_path}}" fallback="assets/images/no-image.png" />
+                        </a>
+                        <div class="movie-title">{{item.title}} {{item.release_date | date:'LLL yyyy'}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div *ngFor="let category of categories; index as i;">
-    <div class="cat-label">{{category.title}}</div>
+    <div class="cat-label">{{category.title}}
+        <button (click)="removeCat(i)">X</button>
+    </div>
     <div class="scrollable">
         <div *ngFor="let item of category.items;">
-            <div *ngIf="!isWatched(item.id) && item.poster_path">
+            <div *ngIf="!isWatched(item.id)">
                 <div class="movie-info">
                     <button class="hide-button" (click)="watched(i, item.id)">X</button>
                     <a routerLink="/movie/{{item.id}}">
-                        <img class="movie-poster" src="{{imgBaseUrl}}{{item.poster_path}}" />
+                        <img class="movie-poster" src="{{imgBaseUrl}}{{item.poster_path}}" fallback="assets/images/no-image.png" />
                     </a>
                     <div class="movie-title">{{item.title}} {{item.release_date | date:'LLL yyyy'}}</div>
                 </div>
