--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,9 +1,4 @@
-<div class="row-100">
-    <div class="col-25">TMDB API key</div>
-    <div class="col-50"><input type="text" [(ngModel)]="tmdbKey" /></div>
-    <div class="col-25"></div>
-</div>
-<div>
+<div *ngIf="showForm">
     <form [formGroup]="fg">
         <div class="row-100" *ngFor="let field of formFields">
             <div class="col-25">{{field.label}}</div>
@@ -25,9 +20,12 @@
             </div>
             <div class="col-25">{{field.desc}}</div>
         </div>
-        <input type="button" value="Add/Update" (click)="addFilter()" />
+        <div class="row-100">
+            <button (click)="addFilter();showForm=false;">Add Filter</button>
+        </div>
     </form>
 </div>
+<div class="label">My Filters<button (click)="showForm=true">+</button></div>
 <div style="overflow-x:auto;">
     <table>
         <tr>
@@ -36,12 +34,12 @@
         </tr>
         <tr *ngFor="let filter of discoverMovieFilters; index as i;">
             <td>{{filter._title}}</td>
-            <td><input type="button" (click)="removeFilter(i)" value="Delete" /></td>
+            <td><button (click)="removeFilter(i)">Delete</button></td>
         </tr>
     </table>
 </div>
 <div class="row-100">
     <div class="col-100">
-        <input type="button" (click)="saveSettings()" value="Save Preferences" />
+        <button (click)="saveSettings()">Save Preferences</button>
     </div>
 </div>
