Added angular material and flex layout for menu bar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,3 +17,13 @@ li a {
     display: block;
     padding: 8px;
 }
+
+.right-menu-item {
+    float: right;
+}
+
+@media screen and (max-width: 960px) {
+    .right-menu-item {
+        float: left;
+    }    
+}
