--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,46 @@
-<div style="height: 100vh;">
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-    <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
-        <mat-icon>menu</mat-icon>
-    </button>
-    <span>Media Browser</span>
-    <span class="example-spacer"></span>
-    <div fxShow="true" fxHide.lt-md="true" style="width: -webkit-fill-available;">
-        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a *ngFor="let nav of navList" routerLink="{{nav.routerLink}}" mat-button>
-            <mat-icon>{{nav.icon}}</mat-icon>{{nav.text}}
-        </a>
-        <button *ngIf="user; else showLogin" (click)="logout()" class="right-menu-item" mat-button>
-            <mat-icon>logout</mat-icon>Logout
-        </button>
-        <ng-template #showLogin>
-            <button (click)="login()" class="right-menu-item" mat-button>
-                <mat-icon>login</mat-icon>Login
+<div>
+    <mat-toolbar color="primary">
+        <mat-toolbar-row>
+            <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+                <mat-icon>menu</mat-icon>
             </button>
-        </ng-template>
-    </div>
-    </mat-toolbar-row>
-</mat-toolbar>
-
-<mat-sidenav-container fxFlexFill>
-    <mat-sidenav #sidenav>
-    <mat-nav-list>
-        <a *ngFor="let nav of navList" routerLink="{{nav.routerLink}}" mat-list-item>
-        <mat-icon>{{nav.icon}}</mat-icon> {{nav.text}}
-        </a>
-        <button *ngIf="user; else showLogin" (click)="logout()" mat-list-item>
-            <mat-icon>logout</mat-icon>Logout
-        </button>
-        <ng-template #showLogin>
-            <button (click)="login()" mat-list-item>
-                <mat-icon>login</mat-icon>Login
-            </button>
-        </ng-template>
-    </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content fxFlexFill>
-    <router-outlet>
-    </router-outlet>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+            <span>Media Browser</span>
+            <span class="example-spacer"></span>
+            <div fxShow="true" fxHide.lt-md="true" style="width: -webkit-fill-available;">
+                <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+                <a *ngFor="let nav of navList" routerLink="{{nav.routerLink}}" mat-button>
+                    <mat-icon>{{nav.icon}}</mat-icon>{{nav.text}}
+                </a>
+                <button *ngIf="user; else showLogin" (click)="logout()" class="right-menu-item" mat-button>
+                    <mat-icon>logout</mat-icon>Logout
+                </button>
+                <ng-template #showLogin>
+                    <button (click)="login()" class="right-menu-item" mat-button>
+                        <mat-icon>login</mat-icon>Login
+                    </button>
+                </ng-template>
+            </div>
+        </mat-toolbar-row>
+    </mat-toolbar>
+    <mat-sidenav-container fxFlexFill>
+        <mat-sidenav #sidenav>
+            <mat-nav-list>
+                <a *ngFor="let nav of navList" routerLink="{{nav.routerLink}}" mat-list-item>
+                <mat-icon>{{nav.icon}}</mat-icon> {{nav.text}}
+                </a>
+                <button *ngIf="user; else showLogin" (click)="logout()" mat-list-item>
+                    <mat-icon>logout</mat-icon>Logout
+                </button>
+                <ng-template #showLogin>
+                    <button (click)="login()" mat-list-item>
+                        <mat-icon>login</mat-icon>Login
+                    </button>
+                </ng-template>
+            </mat-nav-list>
+        </mat-sidenav>
+        <mat-sidenav-content fxFlexFill>
+            <router-outlet>
+            </router-outlet>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
 </div>
