Fix css and category selection

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,5 +25,8 @@ li a {
 @media screen and (max-width: 960px) {
     .right-menu-item {
         float: left;
-    }    
+    }
+    .toolbar {
+        height: 100%;
+    }
 }
