--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -19,7 +19,7 @@ div.scrollable {
     overflow-y: hidden;
     white-space: nowrap;
     margin: 5px 0px;
-    display: inline-flex;
+    display: -webkit-inline-box;
 }
 
 .cat-label {
@@ -59,6 +59,5 @@ div.scrollable {
 }
 
 .hide-button {
-    opacity: 75%;
-    margin-left: -25px;
+    margin-left: -24px;
 }
