--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,9 +9,9 @@
         </div>
         <div class="scrollable">
             <div *ngFor="let item of search.items;">
-                <div *ngIf="!isWatched(item.id)">
+                <div>
                     <div class="movie-info">
-                        <button mat-button (click)="openDialog($event, i, item.id)" class="hide-button">+</button>
+                        <button (click)="openDialog($event, i, item.id)" class="hide-button">+</button>
                         <a routerLink="/movie/{{item.id}}">
                             <img class="movie-poster" src="{{imgBaseUrl}}{{item.poster_path}}" fallback="assets/images/no-image.png" />
                         </a>
@@ -27,10 +27,10 @@
         <button (click)="removeCat(i)">X</button>
     </div>
     <div class="scrollable">
-        <div *ngFor="let item of category.items;">
-            <div *ngIf="!isWatched(item.id)">
+        <div *ngFor="let item of category.items; index as ii">
+            <div>
                 <div class="movie-info">
-                    <button mat-button (click)="openDialog($event, i, item.id)" class="hide-button">+</button>
+                    <button (click)="openDialog($event, i, ii)" class="hide-button">+</button>
                     <a routerLink="/movie/{{item.id}}">
                         <img class="movie-poster" src="{{imgBaseUrl}}{{item.poster_path}}" fallback="assets/images/no-image.png" />
                     </a>
