Added button to add to category on all pages and minor fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
             </div>
         </mat-toolbar-row>
     </mat-toolbar>
-    <mat-sidenav-container fxFlexFill>
+    <mat-sidenav-container>
         <mat-sidenav #sidenav>
             <mat-nav-list>
                 <a *ngFor="let nav of navList" routerLink="{{nav.routerLink}}" mat-list-item>
