--- a/src/app/category-dialog/category-dialog.component.html
+++ b/src/app/category-dialog/category-dialog.component.html
@@ -2,15 +2,12 @@
   <p>Select or Add new category</p>
   <mat-form-field>
     <mat-label>Category</mat-label>
-    <input 
-      matInput 
-      [formControl]="categoryInput"
-      [matAutocomplete]="auto">
-      <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-          {{option}}
-        </mat-option>
-      </mat-autocomplete>
+    <input matInput [formControl]="categoryInput" [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+        {{option}}
+      </mat-option>
+    </mat-autocomplete>
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
