--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,9 +4,10 @@
 </form>
 <div class="filter" *ngIf="searchResults.length > 0">
   <div *ngFor="let search of searchResults; index as i;">
-    <app-scrollview (removeEvent)="removeSearchHandler" [filter]="search"></app-scrollview>
+    <app-scrollview (removeEvent)="removeSearchHandler($event)" [title]="search.title" [items]="search.items"></app-scrollview>
   </div>
 </div>
-<div class="filter" *ngFor="let category of categories; index as i;">
-  <app-scrollview (removeEvent)="removeCatHandler" [filter]="category"></app-scrollview>
+<div class="filter" *ngFor="let filter of filters">
+  <app-scrollview [title]="filter.title" [opt]="filter.discoverOption" [cat]="filter.category"></app-scrollview>
 </div>
+<div #loadMore></div>
