--- a/src/app/shared/scrollview/scrollview.component.html
+++ b/src/app/shared/scrollview/scrollview.component.html
@@ -5,8 +5,8 @@
   <div *ngFor="let item of items; index as ii">
     <div>
       <div class="info">
-        <button (click)="addItemTo(item)">+</button>
-        <a routerLink="/movie/{{item.id}}">
+        <button *ngIf="cat === 'movie'" (click)="addItemTo(item)">+</button>
+        <a routerLink="/{{cat}}/{{item.id}}">
           <img class="poster" src="{{imgBaseUrl}}{{item.poster_path}}" fallback="assets/images/no-image.png" />
         </a>
         <div class="title">{{item.title}} {{item.release_date | date:'LLL yyyy'}}</div>
