Implemented lazy load image with intersection api

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,4 +10,4 @@
 <div class="filter" *ngFor="let filter of filters">
   <app-scrollview [title]="filter.title" [opt]="filter.discoverOption" [cat]="filter.category"></app-scrollview>
 </div>
-<div #loadMore></div>
+<div #loadMore><span *ngIf="storage.genres.length > filterStart">loading....</span></div>
